kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: xpeppy/api.peppysisay.com:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 400m
              memory: 100Mi
