kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: domain-ingress
spec:
  rules:
    - host: api.peppysisay.com
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 8080
  tls:
    - hosts:
        - api.peppysisay.com
      secretName: api-peppysisay-com
